<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/mainBlue">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:src="@drawable/previousonly"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:text="@string/liste_des_communes"
        app:layout_constraintTop_toTopOf="@id/backBtn"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/backBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/claixLL"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center">
            <TextView
                style="@style/torrentList"
                android:text="@string/claix"/>
            <TextView
                style="@style/chevronForm"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:text=">"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/echirollesLL"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center">
            <TextView
                style="@style/torrentList"
                android:text="@string/Echirolles"/>
            <TextView
                style="@style/chevronForm"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:text=">"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pontClaixLL"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center">
            <TextView
                style="@style/torrentList"
                android:text="@string/pont_de_claix"/>
            <TextView
                style="@style/chevronForm"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:text=">"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/seyssinetLL"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center">
            <TextView
                style="@style/torrentList"
                android:text="@string/seyssinet"/>
            <TextView
                style="@style/chevronForm"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:text=">"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/varcesLL"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center">
            <TextView
                style="@style/torrentList"
                android:text="@string/varces_alli_res"/>
            <TextView
                style="@style/chevronForm"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:text=">"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>